--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@expo/webpack-config": "^0.17.2",
     "expo": "~47.0.12",
     "expo-font": "~11.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.9",
-    "expo-splash-screen": "~0.17.5"
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
