--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@expo/webpack-config": "^0.17.2",
     "@gorhom/bottom-sheet": "^4",
     "expo": "~47.0.12",
+    "expo-asset": "~8.7.0",
     "expo-font": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
