--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
     "@gorhom/bottom-sheet": "^4",
+    "@react-navigation/native": "^6.1.2",
     "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
     "expo-font": "~11.0.1",
