--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-cli": "^2.0.1",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-redash": "^18.1.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "world-countries": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
