--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^0.17.2",
     "@gorhom/bottom-sheet": "^4",
     "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
     "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
     "expo-font": "~11.0.1",
