--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native-stack": "^6.9.8",
     "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
+    "expo-build-properties": "~0.4.1",
+    "expo-firebase-recaptcha": "~2.3.1",
     "expo-font": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
@@ -31,6 +33,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
+    "react-native-webview": "11.23.1",
     "recoil": "^0.7.6",
     "world-countries": "^4.0.0"
   },
