--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@expo/webpack-config": "^0.17.2",
     "@freakycoder/react-native-bounceable": "^1.0.3",
     "@gorhom/bottom-sheet": "^4",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "expo": "~47.0.12",
@@ -30,6 +32,7 @@
     "react-native-cli": "^2.0.1",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-dynamic-search-bar": "github:WrathChaos/react-native-dynamic-search-bar#expo",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.1.3",
     "react-native-reanimated": "~2.12.0",
