--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-web": "~0.18.9",
     "react-native-webview": "11.23.1",
     "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
     "world-countries": "^4.0.0"
   },
   "devDependencies": {
