--- a/app.json
+++ b/app.json
@@ -45,6 +45,12 @@
             "useFrameworks": "static"
           }
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos/videos to let you share them with your friends."
+        }
       ]
     ],
     "extra": {
