--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-build-properties": "~0.4.1",
     "expo-firebase-recaptcha": "~2.3.1",
     "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
