--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "base-64": "^1.0.0",
     "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
     "expo-build-properties": "~0.4.1",
