--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.2",
+    "@expo/webpack-config": "^18.0.1",
     "@freakycoder/react-native-bounceable": "^1.0.3",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "base-64": "^1.0.0",
-    "expo": "~47.0.12",
+    "expo": "^47.0.13",
     "expo-asset": "~8.7.0",
     "expo-build-properties": "~0.4.1",
     "expo-firebase-recaptcha": "~2.3.1",
