--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-firebase-recaptcha": "~2.3.1",
     "expo-font": "~11.0.1",
     "expo-image-picker": "~14.0.2",
+    "expo-notifications": "~0.17.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
