--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "^47.0.13",
     "expo-asset": "~8.7.0",
     "expo-build-properties": "~0.4.1",
+    "expo-device": "~5.0.0",
     "expo-firebase-recaptcha": "~2.3.1",
     "expo-font": "~11.0.1",
     "expo-image-picker": "~14.0.2",
