--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-native": "0.70.5",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-autolink": "^4.0.0",
