--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-native-webview": "11.23.1",
