--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "base-64": "^1.0.0",
+    "color-rgba": "^2.4.0",
     "expo": "^47.0.13",
     "expo-asset": "~8.7.0",
     "expo-build-properties": "~0.4.1",
+    "expo-camera": "~13.1.0",
     "expo-contacts": "~11.0.1",
     "expo-device": "~5.0.0",
     "expo-firebase-recaptcha": "~2.3.1",
@@ -38,6 +40,7 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-image-picker": "^5.3.1",
     "react-native-paper": "^5.1.3",
     "react-native-reanimated": "~2.12.0",
     "react-native-redash": "^18.1.0",
