--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.8",
     "base-64": "^1.0.0",
     "color-rgba": "^2.4.0",
+    "dotenv": "^16.0.3",
     "expo": "^47.0.13",
     "expo-asset": "~8.7.0",
     "expo-build-properties": "~0.4.1",
@@ -30,6 +31,8 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
+    "gpt-3-encoder": "^1.1.4",
+    "openai": "^3.2.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.1.1",
@@ -38,6 +41,7 @@
     "react-native-autolink": "^4.0.0",
     "react-native-cli": "^2.0.1",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-picker": "^5.3.1",
@@ -47,6 +51,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-native-webview": "11.23.1",
